--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 3,
   "name": "NetScope Guardian - Browser Threat Contextualizer",
-  "version": "1.0.0",
-  "description": "AI-powered security analysis for web resources using Google Gemini Flash 2.0",
+  "version": "1.0.1",
+  "description": "AI-powered security analysis for web resources using Google Gemini 1.5 Flash",
+  "default_locale": "en",
   "permissions": [
     "activeTab",
     "contextMenus",
@@ -19,8 +20,12 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["content.js"],
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content.js"
+      ],
       "run_at": "document_end"
     }
   ],
@@ -46,8 +51,13 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["assets/*", "sidebar/sidebar.html"],
-      "matches": ["<all_urls>"]
+      "resources": [
+        "assets/*",
+        "sidebar/sidebar.html"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
     }
   ]
 }
